--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,21 @@
-plugins {
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+buildscript {
+    ext.kotlin_version = '1.4.20'
+    ext.spring_boot_version = '2.1.7.RELEASE'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE"
+    }
 }
+
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 subprojects {
 
@@ -21,4 +36,20 @@ subprojects {
         }
     }
 
+}
+repositories {
+    mavenCentral()
+}
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.13"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.13"
+    }
 }
