--- a/server-api/build.gradle
+++ b/server-api/build.gradle
@@ -1,9 +1,20 @@
 plugins {
-    id "org.springframework.boot" version "2.1.7.RELEASE"
+    id "org.springframework.boot"
 }
 
 dependencies {
     implementation project(':common')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.postgresql:postgresql'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.1.51'
 }
+repositories {
+    mavenCentral()
+}
+
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
