--- a/server-api/build.gradle
+++ b/server-api/build.gradle
@@ -4,10 +4,14 @@ plugins {
 
 dependencies {
     implementation project(':common')
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.postgresql:postgresql'
+    compile 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.1.51'
 }
 repositories {
